--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@polkadot/api": "^10.11.2",
-    "axios": "^1.6.3"
+    "axios": "^1.6.3",
+    "telegram-notify": "^1.3.3"
   },
   "description": ""
 }
